[gd_scene load_steps=7 format=3 uid="uid://cimpep6oiuj6g"]

[ext_resource type="TileSet" uid="uid://bjm7jrewce46r" path="res://main_tiles.tres" id="1_8oiiv"]
[ext_resource type="Script" path="res://start_screen.gd" id="2_ccto7"]
[ext_resource type="AudioStream" uid="uid://de3ntp4i71ior" path="res://NinjaAdventure/Musics/1 - Adventure Begin.ogg" id="2_egccw"]
[ext_resource type="PackedScene" uid="uid://dbk7h1a2tg05a" path="res://projectile.tscn" id="3_ap3oh"]

[sub_resource type="Curve2D" id="Curve2D_0hfby"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 384, 0, 0, 0, 0, 0, 384, 224, 0, 0, 0, 0, 0, 224, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="LabelSettings" id="LabelSettings_l4tnd"]
font_size = 100

[node name="Start_Screen" type="TileMap"]
tile_set = ExtResource("1_8oiiv")
format = 2
layer_0/tile_data = PackedInt32Array(0, 131073, 12, 65536, 262145, 12, 131072, 65537, 12, 196608, 65537, 12, 262144, 196609, 12, 327680, 262145, 12, 393216, 65537, 12, 458752, 262145, 12, 524288, 196609, 12, 589824, 65537, 12, 655360, 131073, 12, 720896, 65537, 12, 1, 262145, 12, 65537, 65537, 12, 131073, 131073, 12, 196609, 131073, 12, 262145, 65537, 12, 327681, 196609, 12, 393217, 131073, 12, 458753, 131073, 12, 524289, 131073, 12, 589825, 262145, 12, 655361, 196609, 12, 720897, 196609, 12, 2, 65537, 12, 65538, 131073, 12, 131074, 262145, 12, 196610, 196609, 12, 262146, 196609, 12, 327682, 131073, 12, 393218, 131073, 12, 458754, 262145, 12, 524290, 65537, 12, 589826, 262145, 12, 655362, 196609, 12, 720898, 65537, 12, 3, 262145, 12, 65539, 131073, 12, 131075, 131073, 12, 196611, 131073, 12, 262147, 131073, 12, 327683, 196609, 12, 393219, 196609, 12, 458755, 262145, 12, 524291, 65537, 12, 589827, 65537, 12, 655363, 131073, 12, 720899, 262145, 12, 4, 131073, 12, 65540, 65537, 12, 131076, 196609, 12, 196612, 262145, 12, 262148, 131073, 12, 327684, 262145, 12, 393220, 196609, 12, 458756, 131073, 12, 524292, 196609, 12, 589828, 131073, 12, 655364, 196609, 12, 720900, 196609, 12, 5, 196609, 12, 65541, 262145, 12, 131077, 262145, 12, 196613, 196609, 12, 262149, 65537, 12, 327685, 196609, 12, 393221, 196609, 12, 458757, 262145, 12, 524293, 196609, 12, 589829, 262145, 12, 655365, 196609, 12, 720901, 131073, 12, 6, 196609, 12, 65542, 262145, 12, 131078, 262145, 12, 196614, 262145, 12, 262150, 262145, 12, 327686, 65537, 12, 393222, 262145, 12, 458758, 131073, 12, 524294, 262145, 12, 589830, 131073, 12, 655366, 65537, 12, 720902, 262145, 12, 7, 196609, 12, 65543, 262145, 12, 131079, 65537, 12, 196615, 131073, 12, 262151, 196609, 12, 327687, 131073, 12, 393223, 196609, 12, 458759, 262145, 12, 524295, 65537, 12, 589831, 196609, 12, 655367, 131073, 12, 720903, 65537, 12, 8, 65537, 12, 65544, 65537, 12, 131080, 131073, 12, 196616, 65537, 12, 262152, 262145, 12, 327688, 65537, 12, 393224, 65537, 12, 458760, 262145, 12, 524296, 131073, 12, 589832, 131073, 12, 655368, 131073, 12, 720904, 65537, 12, 9, 131073, 12, 65545, 196609, 12, 131081, 262145, 12, 196617, 131073, 12, 262153, 196609, 12, 327689, 65537, 12, 393225, 262145, 12, 458761, 65537, 12, 524297, 262145, 12, 589833, 65537, 12, 655369, 131073, 12, 720905, 196609, 12, 10, 131073, 12, 65546, 196609, 12, 131082, 262145, 12, 196618, 65537, 12, 262154, 131073, 12, 327690, 131073, 12, 393226, 196609, 12, 458762, 131073, 12, 524298, 65537, 12, 589834, 262145, 12, 655370, 65537, 12, 720906, 65537, 12, 11, 131073, 12, 65547, 262145, 12, 131083, 131073, 12, 196619, 196609, 12, 262155, 65537, 12, 327691, 131073, 12, 393227, 196609, 12, 458763, 65537, 12, 524299, 262145, 12, 589835, 262145, 12, 655371, 262145, 12, 720907, 262145, 12, 12, 196609, 12, 65548, 131073, 12, 131084, 262145, 12, 196620, 65537, 12, 262156, 262145, 12, 327692, 196609, 12, 393228, 131073, 12, 458764, 65537, 12, 524300, 131073, 12, 589836, 131073, 12, 655372, 65537, 12, 720908, 131073, 12, 13, 65537, 12, 65549, 65537, 12, 131085, 131073, 12, 196621, 196609, 12, 262157, 262145, 12, 327693, 196609, 12, 393229, 262145, 12, 458765, 65537, 12, 524301, 65537, 12, 589837, 262145, 12, 655373, 65537, 12, 720909, 65537, 12, 14, 65537, 12, 65550, 196609, 12, 131086, 131073, 12, 196622, 262145, 12, 262158, 262145, 12, 327694, 131073, 12, 393230, 65537, 12, 458766, 65537, 12, 524302, 262145, 12, 589838, 65537, 12, 655374, 65537, 12, 720910, 262145, 12, 15, 262145, 12, 65551, 131073, 12, 131087, 131073, 12, 196623, 131073, 12, 262159, 65537, 12, 327695, 262145, 12, 393231, 262145, 12, 458767, 262145, 12, 524303, 196609, 12, 589839, 131073, 12, 655375, 196609, 12, 720911, 262145, 12, 16, 65537, 12, 65552, 196609, 12, 131088, 262145, 12, 196624, 262145, 12, 262160, 131073, 12, 327696, 196609, 12, 393232, 131073, 12, 458768, 262145, 12, 524304, 262145, 12, 589840, 262145, 12, 655376, 65537, 12, 720912, 262145, 12, 17, 196609, 12, 65553, 131073, 12, 131089, 65537, 12, 196625, 65537, 12, 262161, 262145, 12, 327697, 196609, 12, 393233, 131073, 12, 458769, 65537, 12, 524305, 196609, 12, 589841, 196609, 12, 655377, 65537, 12, 720913, 262145, 12, 18, 131073, 12, 65554, 196609, 12, 131090, 196609, 12, 196626, 65537, 12, 262162, 196609, 12, 327698, 131073, 12, 393234, 65537, 12, 458770, 131073, 12, 524306, 131073, 12, 589842, 262145, 12, 655378, 262145, 12, 720914, 65537, 12, 786432, 65537, 12, 851968, 131073, 12, 786433, 262145, 12, 851969, 65537, 12, 786434, 196609, 12, 851970, 196609, 12, 786435, 262145, 12, 851971, 262145, 12, 786436, 196609, 12, 851972, 131073, 12, 786437, 131073, 12, 851973, 65537, 12, 786438, 65537, 12, 851974, 262145, 12, 786439, 196609, 12, 851975, 131073, 12, 786440, 262145, 12, 851976, 65537, 12, 786441, 196609, 12, 851977, 65537, 12, 786442, 262145, 12, 851978, 262145, 12, 786443, 262145, 12, 851979, 65537, 12, 786444, 262145, 12, 851980, 262145, 12, 786445, 131073, 12, 851981, 262145, 12, 786446, 131073, 12, 851982, 262145, 12, 786447, 65537, 12, 851983, 131073, 12, 786448, 65537, 12, 851984, 196609, 12, 786449, 262145, 12, 851985, 131073, 12, 786450, 262145, 12, 851986, 65537, 12, 19, 262145, 12, 65555, 262145, 12, 131091, 131073, 12, 196627, 131073, 12, 262163, 262145, 12, 327699, 262145, 12, 393235, 196609, 12, 458771, 65537, 12, 524307, 131073, 12, 589843, 65537, 12, 655379, 196609, 12, 720915, 262145, 12, 786451, 65537, 12, 851987, 131073, 12, 20, 131073, 12, 65556, 262145, 12, 131092, 196609, 12, 196628, 262145, 12, 262164, 262145, 12, 327700, 131073, 12, 393236, 65537, 12, 458772, 131073, 12, 524308, 131073, 12, 589844, 196609, 12, 655380, 65537, 12, 720916, 262145, 12, 786452, 131073, 12, 851988, 196609, 12, 21, 262145, 12, 65557, 65537, 12, 131093, 262145, 12, 196629, 131073, 12, 262165, 131073, 12, 327701, 196609, 12, 393237, 262145, 12, 458773, 131073, 12, 524309, 131073, 12, 589845, 131073, 12, 655381, 131073, 12, 720917, 131073, 12, 786453, 196609, 12, 851989, 262145, 12, 22, 196609, 12, 65558, 262145, 12, 131094, 262145, 12, 196630, 65537, 12, 262166, 262145, 12, 327702, 131073, 12, 393238, 262145, 12, 458774, 131073, 12, 524310, 65537, 12, 589846, 65537, 12, 655382, 196609, 12, 720918, 262145, 12, 786454, 131073, 12, 851990, 262145, 12, 23, 131073, 12, 65559, 196609, 12, 131095, 262145, 12, 196631, 65537, 12, 262167, 196609, 12, 327703, 65537, 12, 393239, 196609, 12, 458775, 196609, 12, 524311, 262145, 12, 589847, 196609, 12, 655383, 65537, 12, 720919, 65537, 12, 786455, 131073, 12, 851991, 131073, 12, -1, 393216, 8, -65536, 393216, 8, -65535, 393216, 8, -65534, 393216, 8, -65533, 393216, 8, -65532, 393216, 8, -65531, 393216, 8, -65530, 393216, 8, -65529, 393216, 8, -65528, 393216, 8, -65527, 393216, 8, -65526, 393216, 8, -65525, 393216, 8, -65524, 393216, 8, -65523, 393216, 8, -65522, 393216, 8, -65521, 393216, 8, -65520, 393216, 8, -65519, 393216, 8, -65518, 393216, 8, -65517, 393216, 8, -65516, 393216, 8, -65515, 393216, 8, -65514, 393216, 8, -65513, 393216, 8, -65512, 393216, 8, 24, 393216, 8, 65560, 393216, 8, 131096, 393216, 8, 196632, 393216, 8, 262168, 393216, 8, 327704, 393216, 8, 393240, 393216, 8, 458776, 393216, 8, 524312, 393216, 8, 589848, 393216, 8, 655384, 393216, 8, 720920, 393216, 8, 786456, 393216, 8, 851992, 393216, 8, 917528, 393216, 8, 65535, 393216, 8, 131071, 393216, 8, 196607, 393216, 8, 262143, 393216, 8, 327679, 393216, 8, 393215, 393216, 8, 458751, 393216, 8, 524287, 393216, 8, 589823, 393216, 8, 655359, 393216, 8, 720895, 393216, 8, 786431, 393216, 8, 851967, 393216, 8, 917503, 393216, 8, 983039, 393216, 8, 917504, 393216, 8, 917505, 393216, 8, 917506, 393216, 8, 917507, 393216, 8, 917508, 393216, 8, 917509, 393216, 8, 917510, 393216, 8, 917511, 393216, 8, 917512, 393216, 8, 917513, 393216, 8, 917514, 393216, 8, 917515, 393216, 8, 917516, 393216, 8, 917517, 393216, 8, 917518, 393216, 8, 917519, 393216, 8, 917520, 393216, 8, 917521, 393216, 8, 917522, 393216, 8, 917523, 393216, 8, 917524, 393216, 8, 917525, 393216, 8, 917526, 393216, 8, 917527, 393216, 8)
script = ExtResource("2_ccto7")
projectile_scene = ExtResource("3_ap3oh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(192, 116)
zoom = Vector2(5, 5)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("2_egccw")
autoplay = true

[node name="ShurikenPath" type="Path2D" parent="."]
visible = false
curve = SubResource("Curve2D_0hfby")

[node name="ShurikenSpawnLocation" type="PathFollow2D" parent="ShurikenPath"]

[node name="ShurikenTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_top = 121.0
offset_right = 1152.0
offset_bottom = 292.0
text = "Bouncy Dungeon"
label_settings = SubResource("LabelSettings_l4tnd")
horizontal_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -24.0
offset_right = 155.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Start"

[connection signal="timeout" from="ShurikenTimer" to="." method="_on_shuriken_timer_timeout"]
